# macdev

./: CLAUDE.md  README.md  pyproject.toml  setup.cfg
.github/workflows/: ci.yml
src/macdev/: checks.py  cli.py  config.py  nginx.py  php.py  ssl.py  utils.py  vhost.py
tests/: test_nginx.py  test_php.py  test_utils.py  test_vhost.py
