[metadata]
name = macdev
version = 0.1.0
description = macOS local dev server management CLI (nginx + PHP via Homebrew)

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9
install_requires =
    click>=8.1
    rich>=13.0

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    macdev = macdev.cli:cli
